--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
+
 {
-  "name": "unreal-engine-web-controller",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "unreal-controller-server",
+  "version": "1.0.0",
+  "description": "Socket.IO server for managing Unreal Engine game controllers.",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon"
   },
+  "keywords": [
+    "socket.io",
+    "unreal-engine",
+    "nodejs",
+    "typescript"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "socket.io-client": "^4.8.1"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
